--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,16 +10,25 @@ set(ULBINDING_INCLUDE_DIR ${CMAKE_CURRENT_LIST_DIR}/include)
 set(EXTRA_INCLUDE_DIR ${CMAKE_CURRENT_LIST_DIR}/externals/include)
 set(EXTRA_LIBRARY_DIR ${CMAKE_CURRENT_LIST_DIR}/externals/libs)
 
+if(CMAKE_SYSTEM_NAME MATCHES "Windows")
+  set(ULTRALIGHT_LIBRARY_DIR "${SDK_ROOT}/lib")
+else()
+  set(ULTRALIGHT_LIBRARY_DIR "${SDK_ROOT}/bin")
+endif()
+
 include_directories("${ULBINDING_INCLUDE_DIR}" "${SDK_ROOT}/include"
                     ${CMAKE_CURRENT_LIST_DIR}/embedded)
 
 option(ENABLE_TEST "enable test?" FALSE)
 
 add_library(ulbind17_header INTERFACE)
-target_link_directories(ulbind17_header INTERFACE ${EXTRA_LIBRARY_DIR})
-target_include_directories(ulbind17_header INTERFACE ${ULBINDING_INCLUDE_DIR}
-                                              ${EXTRA_INCLUDE_DIR})
-target_link_libraries(ulbind17_header INTERFACE UltralightCore Ultralight WebCore)
+target_link_directories(ulbind17_header INTERFACE ${EXTRA_LIBRARY_DIR}
+                        ${ULTRALIGHT_LIBRARY_DIR})
+target_include_directories(
+  ulbind17_header INTERFACE ${ULBINDING_INCLUDE_DIR} ${EXTRA_INCLUDE_DIR}
+                            ${SDK_ROOT}/include)
+target_link_libraries(ulbind17_header INTERFACE UltralightCore Ultralight
+                                                WebCore)
 add_library(ulbind17::header ALIAS ulbind17_header)
 
 add_subdirectory(embedded)
