--- a/samples/CMakeLists.txt
+++ b/samples/CMakeLists.txt
@@ -1,12 +1,6 @@
-project(Samples C CXX)
-
-cmake_minimum_required(VERSION 3.3.2)
+cmake_minimum_required(VERSION 3.22)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
-set(ULTRALIGHT_BINARY_DIR "${SDK_ROOT}/bin")
-
-target_link_directories(ulbind17 INTERFACE ${ULTRALIGHT_LIBRARY_DIR})
 
 if(PORT MATCHES "UltralightMac")
   set(CMAKE_SKIP_BUILD_RPATH FALSE)
@@ -19,6 +13,8 @@ if(PORT MATCHES "UltralightLinux")
   set(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
   set(CMAKE_INSTALL_RPATH "$\{ORIGIN\}")
 endif()
+
+get_target_property(ULTRALIGHT_BINARY_DIR ultralight-sdk ULTRALIGHT_BINARY_DIR)
 
 add_subdirectory("Sample 1 - CppFunction")
 add_subdirectory("Sample 2 - JSArray")
