--- a/ultralight-sdk/CMakeLists.txt
+++ b/ultralight-sdk/CMakeLists.txt
@@ -10,15 +10,17 @@ if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
     URL https://github.com/ultralight-ux/Ultralight/releases/download/v1.4.0-beta/ultralight-sdk-1.4.0b-linux-x64.7z
     URL_HASH MD5=74302987a6e0ae3ce1dddf4bedbe600f
     SOURCE_SUBDIR "invalid_source_subdir" EXCLUDE_FROM_ALL)
+  message("fetching ultralight-sdk-package...")
   FetchContent_MakeAvailable(ultralight-sdk-package)
   target_link_directories(ultralight-sdk INTERFACE
                           "${ultralight-sdk-package_SOURCE_DIR}/bin")
 elseif(CMAKE_SYSTEM_NAME STREQUAL "Windows")
   FetchContent_Declare(
     ultralight-sdk-package
-    URL https://github.com/ultralight-ux/Ultralight/releases/download/v1.4.0-beta/ultralight-sdk-1.4.0b-win-x64.7z
+    URL https://mirror.ghproxy.com/https://github.com/ultralight-ux/Ultralight/releases/download/v1.4.0-beta/ultralight-sdk-1.4.0b-win-x64.7z
     URL_HASH MD5=6b2de2e4b341503909f3635edf50e926
     SOURCE_SUBDIR "invalid_source_subdir" EXCLUDE_FROM_ALL)
+  message("fetching ultralight-sdk-package...")
   FetchContent_MakeAvailable(ultralight-sdk-package)
   target_link_directories(ultralight-sdk INTERFACE
                           "${ultralight-sdk-package_SOURCE_DIR}/lib")
@@ -28,6 +30,7 @@ elseif(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
     URL https://github.com/ultralight-ux/Ultralight/releases/download/v1.4.0-beta/ultralight-sdk-1.4.0b-mac-x64.7z
     URL_HASH MD5=318b3cccf30b82dee21085d08b2e2200
     SOURCE_SUBDIR "invalid_source_subdir" EXCLUDE_FROM_ALL)
+  message("fetching ultralight-sdk-package...")
   FetchContent_MakeAvailable(ultralight-sdk-package)
   target_link_directories(ultralight-sdk INTERFACE
                           "${ultralight-sdk-package_SOURCE_DIR}/bin")
