--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -47,6 +47,7 @@ jobs:
         uses: lukka/run-cmake@v10
         with:
           configurePreset: ${{ matrix.preset }}
+          configurePresetAdditionalArgs: "['-DENABLE_TEST=ON']"
           buildPreset: ${{ matrix.preset }}
         env: ${{ matrix.env }}
 
