--- a/samples/CMakeLists.txt
+++ b/samples/CMakeLists.txt
@@ -1,6 +1,15 @@
 cmake_minimum_required(VERSION 3.22)
+
+project(samples)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
+# Enable VCPKG if VCPKG_ROOT defined.
+if(DEFINED ENV{VCPKG_ROOT})
+  include("$ENV{VCPKG_ROOT}/scripts/buildsystems/vcpkg.cmake")
+else()
+  message("!!! no vcpkg_root")
+endif()
 
 if(PORT MATCHES "UltralightMac")
   set(CMAKE_SKIP_BUILD_RPATH FALSE)
