--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -37,11 +37,16 @@ jobs:
       # Install latest CMake and Ninja.
       - uses: lukka/get-cmake@latest
 
-      - name: Install dependencies
-        if: ${{ matrix.os == 'ubuntu-24.04' }}
+      - name: 🐧 Install dependencies
+        if: runner.os == 'Linux'
         run: |
           sudo apt-get update -qq
-          sudo apt-get install -qqq build-essential pkg-config gcc-13 g++-13
+          sudo apt-get install -qqq build-essential pkg-config gcc-13 g++-13 xorg openbox
+
+      - name: Install dependencies
+        if: runner.os == 'macOS'
+        run: |
+          brew --cask install xquartz
 
       - name: Setup anew (or from cache) vcpkg (and does not build any package)
         uses: lukka/run-vcpkg@v11 # Always specify the specific _version_ of the
