--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -41,7 +41,7 @@ jobs:
         if: runner.os == 'Linux'
         run: |
           sudo apt-get update -qq
-          sudo apt-get install -qqq build-essential pkg-config gcc-13 g++-13 xorg xinerama xcursor libglu1-mesa
+          sudo apt-get install -qqq build-essential pkg-config gcc-13 g++-13 xorg libglu1-mesa
 
       - name: 🍎 Install dependencies
         if: runner.os == 'macOS'
