--- a/ultralight-sdk/CMakeLists.txt
+++ b/ultralight-sdk/CMakeLists.txt
@@ -13,7 +13,7 @@ if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
   message("fetching ultralight-sdk-package...")
   FetchContent_MakeAvailable(ultralight-sdk-package)
   target_link_directories(ultralight-sdk INTERFACE
-                          "${ultralight-sdk-package_SOURCE_DIR}/bin")
+    "${ultralight-sdk-package_SOURCE_DIR}/bin")
 elseif(CMAKE_SYSTEM_NAME STREQUAL "Windows")
   FetchContent_Declare(
     ultralight-sdk-package
@@ -23,17 +23,26 @@ elseif(CMAKE_SYSTEM_NAME STREQUAL "Windows")
   message("fetching ultralight-sdk-package...")
   FetchContent_MakeAvailable(ultralight-sdk-package)
   target_link_directories(ultralight-sdk INTERFACE
-                          "${ultralight-sdk-package_SOURCE_DIR}/lib")
+    "${ultralight-sdk-package_SOURCE_DIR}/lib")
 elseif(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
-  FetchContent_Declare(
-    ultralight-sdk-package
-    URL https://github.com/ultralight-ux/Ultralight/releases/download/v1.4.0-beta/ultralight-sdk-1.4.0b-mac-x64.7z
-    URL_HASH MD5=318b3cccf30b82dee21085d08b2e2200
-    SOURCE_SUBDIR "invalid_source_subdir" EXCLUDE_FROM_ALL)
+  if(CMAKE_HOST_SYSTEM_PROCESSOR MATCHES "x86_64")
+    FetchContent_Declare(
+      ultralight-sdk-package
+      URL https://github.com/ultralight-ux/Ultralight/releases/download/v1.4.0-beta/ultralight-sdk-1.4.0b-mac-x64.7z
+      URL_HASH MD5=318b3cccf30b82dee21085d08b2e2200
+      SOURCE_SUBDIR "invalid_source_subdir" EXCLUDE_FROM_ALL)
+  else()
+    FetchContent_Declare(
+      ultralight-sdk-package
+      URL https://github.com/ultralight-ux/Ultralight/releases/download/v1.4.0-beta/ultralight-sdk-1.4.0b-mac-arm64.7z
+      URL_HASH MD5=eb151b5abb34f0ebd0be97139fc2e725
+      SOURCE_SUBDIR "invalid_source_subdir" EXCLUDE_FROM_ALL)
+  endif()
+
   message("fetching ultralight-sdk-package...")
   FetchContent_MakeAvailable(ultralight-sdk-package)
   target_link_directories(ultralight-sdk INTERFACE
-                          "${ultralight-sdk-package_SOURCE_DIR}/bin")
+    "${ultralight-sdk-package_SOURCE_DIR}/bin")
 else()
   message(FATAL_ERROR "Not implemented support for ${CMAKE_SYSTEM_NAME}")
 endif()
@@ -41,7 +50,7 @@ endif()
 target_include_directories(
   ultralight-sdk INTERFACE "${ultralight-sdk-package_SOURCE_DIR}/include")
 target_link_libraries(ultralight-sdk INTERFACE UltralightCore Ultralight
-                                               WebCore)
+  WebCore)
 set_target_properties(
   ultralight-sdk PROPERTIES ULTRALIGHT_BINARY_DIR
-                            "${ultralight-sdk-package_SOURCE_DIR}/bin")
+  "${ultralight-sdk-package_SOURCE_DIR}/bin")
