update download script

--- a/ultralight-sdk/CMakeLists.txt
+++ b/ultralight-sdk/CMakeLists.txt
@@ -4,53 +4,54 @@ include(FetchContent)
 
 add_library(ultralight-sdk INTERFACE)
 
+message(STATUS "downloading ultralight-sdk...")
 if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
-  FetchContent_Declare(
-    ultralight-sdk-package
-    URL https://github.com/ultralight-ux/Ultralight/releases/download/v1.4.0-beta/ultralight-sdk-1.4.0b-linux-x64.7z
-    URL_HASH MD5=74302987a6e0ae3ce1dddf4bedbe600f
-    SOURCE_SUBDIR "invalid_source_subdir" EXCLUDE_FROM_ALL)
-  message("fetching ultralight-sdk-package...")
-  FetchContent_MakeAvailable(ultralight-sdk-package)
-  target_link_directories(ultralight-sdk INTERFACE
-    "${ultralight-sdk-package_SOURCE_DIR}/bin")
+  file(
+    DOWNLOAD
+    https://github.com/ultralight-ux/Ultralight/releases/download/v1.4.0-beta/ultralight-sdk-1.4.0b-linux-x64.7z
+    ${CMAKE_CURRENT_BINARY_DIR}/ultralight-sdk.7z
+    SHOW_PROGRESS
+    EXPECTED_MD5 74302987a6e0ae3ce1dddf4bedbe600f)
 elseif(CMAKE_SYSTEM_NAME STREQUAL "Windows")
-  FetchContent_Declare(
-    ultralight-sdk-package
-    URL https://github.com/ultralight-ux/Ultralight/releases/download/v1.4.0-beta/ultralight-sdk-1.4.0b-win-x64.7z
-    URL_HASH MD5=6b2de2e4b341503909f3635edf50e926
-    SOURCE_SUBDIR "invalid_source_subdir" EXCLUDE_FROM_ALL)
-  message("fetching ultralight-sdk-package...")
-  FetchContent_MakeAvailable(ultralight-sdk-package)
-  target_link_directories(ultralight-sdk INTERFACE
-    "${ultralight-sdk-package_SOURCE_DIR}/lib")
-elseif(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
-  if(CMAKE_HOST_SYSTEM_PROCESSOR MATCHES "x86_64")
-    FetchContent_Declare(
-      ultralight-sdk-package
-      URL https://github.com/ultralight-ux/Ultralight/releases/download/v1.4.0-beta/ultralight-sdk-1.4.0b-mac-x64.7z
-      URL_HASH MD5=318b3cccf30b82dee21085d08b2e2200
-      SOURCE_SUBDIR "invalid_source_subdir" EXCLUDE_FROM_ALL)
-  else()
-    FetchContent_Declare(
-      ultralight-sdk-package
-      URL https://github.com/ultralight-ux/Ultralight/releases/download/v1.4.0-beta/ultralight-sdk-1.4.0b-mac-arm64.7z
-      URL_HASH MD5=eb151b5abb34f0ebd0be97139fc2e725
-      SOURCE_SUBDIR "invalid_source_subdir" EXCLUDE_FROM_ALL)
-  endif()
+  file(
+    DOWNLOAD
+    https://github.com/ultralight-ux/Ultralight/releases/download/v1.4.0-beta/ultralight-sdk-1.4.0b-win-x64.7z
+    ${CMAKE_CURRENT_BINARY_DIR}/ultralight-sdk.7z
+    SHOW_PROGRESS
+    EXPECTED_MD5 6b2de2e4b341503909f3635edf50e926)
 
-  message("fetching ultralight-sdk-package...")
-  FetchContent_MakeAvailable(ultralight-sdk-package)
-  target_link_directories(ultralight-sdk INTERFACE
-    "${ultralight-sdk-package_SOURCE_DIR}/bin")
+elseif(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
+  if(CMAKE_OSX_ARCHITECTURES MATCHES "arm64")
+    message(STATUS "Building for ARM")
+    file(
+      DOWNLOAD
+      https://github.com/ultralight-ux/Ultralight/releases/download/v1.4.0-beta/ultralight-sdk-1.4.0b-mac-arm64.7z
+      ${CMAKE_CURRENT_BINARY_DIR}/ultralight-sdk.7z
+      SHOW_PROGRESS
+      EXPECTED_MD5 eb151b5abb34f0ebd0be97139fc2e725)
+  else()
+    message(STATUS "Building for x86_64 or Universal")
+    file(
+      DOWNLOAD
+      https://github.com/ultralight-ux/Ultralight/releases/download/v1.4.0-beta/ultralight-sdk-1.4.0b-mac-x64.7z
+      ${CMAKE_CURRENT_BINARY_DIR}/ultralight-sdk.7z
+      SHOW_PROGRESS
+      EXPECTED_MD5 318b3cccf30b82dee21085d08b2e2200)
+  endif()
 else()
   message(FATAL_ERROR "Not implemented support for ${CMAKE_SYSTEM_NAME}")
 endif()
 
+file(ARCHIVE_EXTRACT INPUT ${CMAKE_CURRENT_BINARY_DIR}/ultralight-sdk.7z
+     DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/ultralight-sdk)
+
+target_link_directories(
+  ultralight-sdk INTERFACE "${CMAKE_CURRENT_BINARY_DIR}/ultralight-sdk/bin"
+  "${CMAKE_CURRENT_BINARY_DIR}/ultralight-sdk/lib")
 target_include_directories(
-  ultralight-sdk INTERFACE "${ultralight-sdk-package_SOURCE_DIR}/include")
+  ultralight-sdk INTERFACE "${CMAKE_CURRENT_BINARY_DIR}/ultralight-sdk/include")
 target_link_libraries(ultralight-sdk INTERFACE UltralightCore Ultralight
-  WebCore)
+                                               WebCore)
 set_target_properties(
   ultralight-sdk PROPERTIES ULTRALIGHT_BINARY_DIR
-  "${ultralight-sdk-package_SOURCE_DIR}/bin")
+                            "${CMAKE_CURRENT_BINARY_DIR}/ultralight-sdk/bin")
