--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -59,7 +59,7 @@ jobs:
         uses: lukka/run-cmake@v10
         with:
           configurePreset: ${{ matrix.preset }}
-          configurePresetAdditionalArgs: "['-DENABLE_TEST=ON']"
+          configurePresetAdditionalArgs: ${{ matrix.configurePresetAdditionalArgs }}
           buildPreset: ${{ matrix.preset }}
         env: ${{ matrix.env }}
 
