--- a/ultralight-sdk/CMakeLists.txt
+++ b/ultralight-sdk/CMakeLists.txt
@@ -22,7 +22,7 @@ elseif(CMAKE_SYSTEM_NAME STREQUAL "Windows")
 
 elseif(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
   if(CMAKE_OSX_ARCHITECTURES MATCHES "x86_64")
-    message(STATUS "Building for x86_64 or Universal")
+    message(STATUS "Building for Darwin x86_64")
     file(
       DOWNLOAD
       https://github.com/ultralight-ux/Ultralight/releases/download/v1.4.0-beta/ultralight-sdk-1.4.0b-mac-x64.7z
@@ -30,7 +30,7 @@ elseif(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
       SHOW_PROGRESS
       EXPECTED_MD5 318b3cccf30b82dee21085d08b2e2200)
   else()
-    message(STATUS "Building for ARM")
+    message(STATUS "Building for Darwin ARM")
     file(
       DOWNLOAD
       https://github.com/ultralight-ux/Ultralight/releases/download/v1.4.0-beta/ultralight-sdk-1.4.0b-mac-arm64.7z
